# Orange-rs

./: .gitignore  Cargo.toml  README.md  ]  block_id_map.json  shader_transparent.wgsl
app/: Cargo.toml
app/src/: main.rs
assets/minecraft/blockstates/: bed.json  cobblestone_stair.json  crops.json  dispenser.json  double_stair.json  farmland.json  flowing_lava.json  flowing_water.json  furnace.json  furnace_active.json  iron_door.json  ladder.json  leaves.json  log.json  ore_redstone.json  ore_redstone_glowing.json  pumpkin.json  pumpkin_lantern.json  sapling.json  single_stair.json  still_lava.json  still_water.json  stone_pressure_plate.json  torch.json  wood.json  wooden_door.json  wooden_pressure_plate.json  wooden_stairs.json
assets/minecraft/models/block/: birch_leaves.json  furnace_active.json  jukebox.json  pumpkin_lantern.json  snow_layer.json  sugar_cane.json  torch.json  well_torch.json  wheat_0.json  wheat_1.json  wheat_2.json  wheat_3.json  wheat_4.json  wheat_5.json  wheat_6.json  wheat_7.json  white_wool.json  yellow_wool.json
assets/minecraft/models/block/template/: door_bottom_left.json  door_bottom_right.json  door_top_left.json  door_top_right.json  orientable.json  slab.json  slab_all.json  slab_column.json  stair.json  torch.json  wall_torch.json
assets/minecraft/textures/block/: terrain.mcatlas
assets/shaders/: shader.wgsl  shader_transparent.wgsl
client/: Cargo.toml  shader.wgsl
client-app/: Cargo.toml
client-app/src/: cli_options.rs  game_client.rs  game_version.rs  main.rs  mc_resource_handler.rs  orange_options.rs  test_world.rs
client-app/src/client/: camera.rs  client_chunk.rs  minecraft_client.rs  mod.rs
client-app/src/rendering/: tessellator.rs  verticies.rs  world_renders.rs
client/src/: camera.rs  client_chunk.rs  client_world.rs  lib.rs  mc_resource_handler.rs
client/src/gui/: screen.rs
client/src/rendering/: mod.rs  tessellator.rs  textures.rs  verticies.rs  world_renders.rs
download_assets/: Cargo.toml
download_assets/src/: main.rs  mc_constants.rs
src/: camera.rs  direction.rs  entity.rs  game_version.rs  identifier.rs  lib.rs  main.rs  math_helper.rs  mc_assets.rs  mc_resource_handler.rs  registry.rs  rendering.rs  resource_loader.rs  resource_manager.rs  shader.wgsl  utils.rs  world.rs
src/block/: block_factory.rs  mod.rs  properties.rs
src/client/: camera.rs  client_chunk.rs  client_world.rs  mc_resource_handler.rs  minecraft_client.rs  mod.rs  resource_manager.rs
src/client/gui/: screen.rs
src/client/models/: mod.rs  model.rs  model_builder.rs
src/client/rendering/: mesh.rs  mod.rs  tessellator.rs  textures.rs  verticies.rs  wgpu_struct.rs  world_renders.rs
src/client/textures/: mod.rs
src/entities/: mod.rs
src/level/: chunk.rs  chunk_map.rs  dimension.rs  mod.rs  terrain_generator.rs
src/minecraft/: asset_loader.rs  blocks.rs  filetypes.rs  identifier.rs  mc_resource_handler.rs  mod.rs  registry.rs  template_models.rs
src/minecraft/prot14/: mod.rs  properties.rs
src/models/: mod.rs  model.rs  model_builder.rs
src/packets/: mod.rs  prot14.rs
src/rendering/: mesh.rs  tessellator.rs  textures.rs  verticies.rs
src/server/: mod.rs  network_interface.rs  player_handler.rs  server_player.rs
src/sprites/: mod.rs
src/util/: frustrum.rs  mod.rs  nibble.rs  pos.rs  workers.rs
src/world/: chunk.rs  chunk_map.rs  dimension.rs  mod.rs  terrain_generator.rs
web/: Cargo.toml
web-client-app/: Cargo.toml
web-client-app/src/: lib.rs
web/src/: lib.rs
