[workspace]
members = ["client-app", "download_assets"]

[package]
name = "orange_rs"
version = "0.1.0"
authors = ["jaquobia"]
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"

[profile.release]
# lto = true
# lto = "thin"
# strip = "debuginfo"
# strip = true

[dependencies]
winit = "0.28"
wgpu = { version = "0.16", optional = true }
pollster = "0.3"
image = "0.24"
lazy_static = "1.4"
instant = { version = "0.1", features = ["stdweb"] }

env_logger = "0.10.0"
log = "0.4"
thiserror = "1.0.44"

ultraviolet = {version = "0.9.0", features = ["bytemuck", "int", "f64"]}
bytemuck = { version = "1.12", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tungstenite = "0.19.0"
byteorder = "1"
rustc-hash = "1.1.0"

orange_networking = { git = "https://github.com/jaquobia/orange_networking.git" }
flate2 = "1.0.25"
# surf = "2.3.2"

legion = "0.4.0"


[features]
default = ["client", "integrated"]
# Expand chunks to occupy the space of 4 chunks, highly expiramental
large_chunks = []
# Client available, enables connecting to servers
client = ["wgpu"]
# Client and Server together, direct communication, enables singleplayer
integrated = ["client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
