[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orange_rs = { path = "../" }
env_logger = "0.10.0"
log = "0.4"
# zip = "0.6"
# tempfile = "3"
# home = "0.5.4"
# egui = "0.19.0"
# egui-winit = { version = "0.19.0", features = []}
# egui-wgpu = "0.19.0"
