[package]
name = "orange_rs_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
winit_input_helper = "0.13"
wgpu = "0.14.2"
orange_rs = { path = "../", features = [] }
ultraviolet = {version = "0.9.0", features = ["bytemuck", "int", "f64"]}
client = { path = "../client" }
env_logger = "0.10.0"
log = "0.4"
