[package]
name = "orange_rs_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
winit_input_helper = "0.14"
wgpu = "0.16.0"
rine = { git = "https://github.com/jaquobia/rine.git", features = ["egui-int"] }
orange_rs = { path = "../", features = ["integrated"] }
ultraviolet = {version = "0.9.0", features = ["bytemuck", "int", "f64"]}
env_logger = "0.10.0"
log = "0.4"
instant = { version = "0.1", features = ["stdweb"] }
orange_networking = { git = "https://github.com/jaquobia/orange_networking.git" }
legion = "0.4"
flate2 = "1.0.25"
rustc-hash = "1.1.0"
toml = "0.7.6"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
dirs = "5.0.1"

[features]
default = ["egui-int"]
egui-int = ["rine/egui-int"]
