[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orange_rs = { path = "../" }
winit = "0.27"
wgpu = "0.14.2"
image = "0.24"
instant = { version = "0.1", features = ["stdweb"] }
ultraviolet = {version = "0.9.0", features = ["bytemuck", "int", "f64"]}
bytemuck = { version = "1.12", features = ["derive"] }
pollster = "0.2"
log = "0.4"
legion = "0.4.0"
